[project]
name = "openasa"
version = "0.1.0"
description = "Open automated semen analysis — smartphone CASA screening pipeline"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pipeline = ["ultralytics>=8.3", "opencv-python>=4.8"]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["."]
